--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ body {
     font-family: "PT Sans Narrow", "Arial", sans-serif;
     text-transform: uppercase;
     color: #000000;
-    /*background-image: url("../../Shop.jpg");*/
+    /*background-image: url("../../Item.jpg");*/
     background-position: 50% 0;
 }
 
 .page-heading-1 {
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-size: 30px;
     line-height: 1.4;
 }
@@ -26,7 +26,7 @@ body {
 }
 
 .page-header {
-    margin-bottom: 55px; /* фоновую текстуру установлю для body, те этот промежуток между
+    margin-bottom: 54px; /* фоновую текстуру установлю для body, те этот промежуток между
     page-header и main будет окрашен */
     opacity: 0.5;
 }
@@ -83,15 +83,28 @@ main {
 }
 
 .breadcrumbs {
-    max-height: 20px;
+    padding-left: 0;
+    margin-top: 0;
     margin-bottom: 52px;
     font-size: 0px;
 }
 
 .breadcrumbs li {
     display: inline-block;
+    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: top;
+}
 
+.breadcrumbs a {
     font-size: 14px;
+    line-height: 20px;
+}
+
+.item-page-breadcrumbs a {
+    margin-top: 0;
+    line-height: 24px;
 }
 
 .filters {
@@ -170,10 +183,10 @@ body > * > *  > * {
 
 .page-footer .social-networks {
     float: left;
-    min-width: 140px;
 }
 
 .page-footer .social-networks ul {
+    min-width: 140px;
     padding-left: 0;
 }
 
@@ -191,4 +204,67 @@ body > * > *  > * {
 .page-footer .copyright {
     float: right;
     width: 140px;
+}
+
+.product-details-gallery {
+    float: left;
+    width: 460px;
+    min-height: 668px;
+    font-size: 0;
+}
+
+.product-details {
+    margin-bottom: 49px;
+}
+
+.product-details-info {
+    float: right;
+    width: 390px;
+    padding-top: 22px;
+}
+
+.gallery-image-large {
+    display: block;
+    width: 460px;
+    height: 498px;
+    margin-bottom: 21px;
+}
+
+.gallery-image-small {
+    display: inline-block;
+    width: 140px;
+    height: 149px;
+    margin-right: 20px;
+}
+
+.gallery-image-small:last-child {
+    margin-right: 0px;
+}
+
+.product-details-status {
+    float: left;
+    min-width: 90px;
+    margin-bottom: 36px;
+}
+
+.product-details-code {
+    float: right;
+    min-width: 126px;
+    margin-bottom: 36px;
+}
+
+.product-details-description {
+    min-height: 137px;
+    margin-bottom: 38px;
+    clear: both;
+}
+
+.product-details-info .product-buy {
+    min-width: 187px;
+    min-height: 43px;
+    margin-bottom: 64px;
+}
+
+.product-details-contents .page-heading-2 {
+    margin-bottom: 32px;
 }
