--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,14 @@ body {
     background-position: 50% 0;
 }
 
-.page-heading-1 {
+h1 {
     margin-top: 0;
     margin-bottom: 15px;
     font-size: 30px;
     line-height: 1.4;
 }
 
-.page-heading-2 {
+h2 {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 24px;
@@ -152,12 +152,23 @@ body > * > *  > * {
     display: inline-block;
 }
 
+.products-list {
+    font-size: 0;
+}
+
 .product {
-    float: left;
+    display: inline-block;
     width: 220px;
     min-height: 286px;
     margin-right: 20px;
     margin-bottom: 20px;
+    font-size: 14px;
+    vertical-align: top;
+}
+
+.product > h2 {
+    font-size: 14px;
+    line-height: 18px;
 }
 
 .product:nth-child(3n) {
